tests/type/errors/bad_arg_shadowing.typedsol
1:4 error: Conflicting declarations
